tests/paczka1/fuzzy1/46782797.err
Error in line 1: t4VTPe S671 99,4
Error in line 5: EykA8DPNe A317 79,3
Error in line 7: t4VTPe A578 97,0
